<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_search">Поиск</string>
    <string name="title_playlist">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="button_switch_theme">Темная тема</string>
    <string name="button_share_app">Поделиться приложением</string>
    <string name="button_support">Написать в поддержку</string>
    <string name="button_user_agre">Пользовательское соглашение</string>
    <string name="link_android_dev">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="gratitude_devs">Cпасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messege_to_devs">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_yandex">zloy.korolev@yandex.ru</string>
    <string name="url_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_reply">No reply</string>
    <string name="nothing_found"> Ничего не нашлось </string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_was_searched">Вы Искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="timecode">00:00</string>
    <string name="Time">Длительность</string>
    <string name="Albome">Альбом</string>
    <string name="Year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>