<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="4dp"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">
        <Button
            android:id="@+id/back_button"
            style="@style/BackButtonStyle"
            />

        <TextView
            style="@style/TextWithBackButtonStyle"
            android:text="@string/title_settings"
            />
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"


            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="21dp"
                android:paddingTop="21dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ysregular"
                android:text="@string/button_switch_theme"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:layout_gravity="start"

            />


            <Switch

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center"
                android:textColor="@color/YP_Black"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </FrameLayout>

        <Button
            android:id="@+id/share_app"
            style="@style/SettingsActivityButtonStyle"
            android:text="@string/button_share_app"
            app:icon="@drawable/share"


            />
        <Button
            android:id="@+id/write_to_support"
            style="@style/SettingsActivityButtonStyle"
            android:text="@string/button_support"
            app:icon="@drawable/support"

            />
        <Button
            android:id="@+id/user_agre"
            style="@style/SettingsActivityButtonStyle"
            android:text="@string/button_user_agre"
            app:icon="@drawable/arrow_forward"
            />



</LinearLayout>