<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:paddingBottom="26dp"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.player.PlayerActivity"
        android:theme="@style/Theme.PlaylistMaker"
        android:background="?attr/colorSecondary">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            app:tint="?attr/colorOnPrimary" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="52dp" />

        <ImageView
            android:id="@+id/ivCover"
            android:layout_marginTop="26dp"
            android:background="@drawable/image_of_track_on_player"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            />
        <TextView
            android:id="@+id/tvTrackname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/ivCover"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            android:text="@string/no_reply"
            android:layout_marginTop="24dp"

            />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTrackname"

            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/addtolibrary"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            app:layout_constraintEnd_toStartOf="@id/playStop"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:background="@drawable/button_on_player"
            android:src="@drawable/add_to_library"
            style="@style/ButtonOnPlayer"


            />

        <ImageButton
            android:id="@+id/playStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/addtolibrary"
            app:layout_constraintTop_toTopOf="@id/addtolibrary"
            app:layout_constraintEnd_toStartOf="@id/likeTrack"
            app:layout_constraintStart_toEndOf="@id/addtolibrary"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:src="@drawable/play_stop"
            android:backgroundTint="?attr/colorSecondary"

            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/likeTrack"
            android:layout_width="51dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="@id/addtolibrary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/playStop"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:background="@drawable/button_on_player"
            style="@style/ButtonOnPlayer"
            android:src="@drawable/like"
            />

        <TextView
            android:id="@+id/timeCode"
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/timecode"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/playStop"
            tools:ignore="TextSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/ntvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@id/timeCode"
            app:layout_constraintStart_toStartOf="@id/left_guideline2"
            android:text="@string/Time"
            android:textColor="#AEAFB4"
            />
        <TextView
            android:id="@+id/ntvAlbome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/ntvTime"
            app:layout_constraintStart_toStartOf="@id/left_guideline2"
            android:text="@string/Albome"
            android:textColor="#AEAFB4"
            />
        <TextView
            android:id="@+id/ntvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/ntvAlbome"
            app:layout_constraintStart_toStartOf="@id/left_guideline2"
            android:text="@string/Year"
            android:textColor="#AEAFB4"
            />
        <TextView
            android:id="@+id/ntvgenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/ntvYear"
            app:layout_constraintStart_toStartOf="@id/left_guideline2"
            android:text="@string/genre"
            android:textColor="#AEAFB4"
            />
        <TextView
            android:id="@+id/nCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/ntvgenre"
            app:layout_constraintStart_toStartOf="@id/left_guideline2"
            android:text="@string/country"
            android:textColor="#AEAFB4"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="nCountry,ntvAlbome,ntvgenre,ntvTime,ntvYear"
            app:barrierDirection="end" />


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@id/timeCode"
            app:layout_constraintEnd_toEndOf="@id/right_guideline2"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            android:layout_marginStart="13dp"
            android:gravity="end"

            />
        <TextView
            android:id="@+id/tvAlbome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintEnd_toEndOf="@id/right_guideline2"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            android:layout_marginStart="13dp"
            android:gravity="end"
            />
        <TextView
            android:id="@+id/tvYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/tvAlbome"
            app:layout_constraintEnd_toEndOf="@id/right_guideline2"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            android:layout_marginStart="13dp"
            android:gravity="end"
            />
        <TextView
            android:id="@+id/tvgenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/tvYear"
            app:layout_constraintEnd_toEndOf="@id/right_guideline2"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            android:layout_marginStart="13dp"
            android:gravity="end"
            />
        <TextView
            android:id="@+id/Country"
            android:layout_width="0dp"
            android:layout_marginStart="13dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/tvgenre"
            app:layout_constraintEnd_toEndOf="@id/right_guideline2"
            android:text="@string/no_reply"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            android:gravity="end"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>